--- a/src/pages/CreateSurvey/CreateSurvey.scss
+++ b/src/pages/CreateSurvey/CreateSurvey.scss
@@ -3,5 +3,6 @@
   margin: 0 auto;
   text-align: center;
   margin-top: 5rem;
+  margin-bottom: 2.5rem;
   max-width: 1200px;
 }
